ml-ex3:neural networks feedforward propagation

--- a/notes/ML_Notes.tex
+++ b/notes/ML_Notes.tex
@@ -243,4 +243,8 @@ In summary, the matrix form of updating $\theta$ can be expressed below:
 $$\Theta = \Theta - \alpha*X^T*(h_\theta(x)-y)$$
 Thus will pave a convenient way to express in MATLAB. Also, we can express cost function and gradient in matrix form.
 
+%-------------------------------------------------------
+\section{week4}
+
+
 \end{document}
